--- a/TouchGFX/target.config
+++ b/TouchGFX/target.config
@@ -3,7 +3,7 @@
     "touchgfx_path": "../Middlewares/ST/touchgfx",
     "family": "STM32F4",
     "sub_family": "STM32F429/439",
-    "toolchain": "CMake",
+    "toolchain": "STM32CubeIDE",
     "platform": "m4",
     "project_file": "../GFX_demo.ioc",
     "optional_components_root": "../Middlewares/ST/touchgfx_components",
