--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
         {
             "cwd": "${workspaceRoot}",
             "type": "cortex-debug",
-            "request": "launch",
+            "request": "attach",
             "name": "Debug: JLINK",
             "servertype": "jlink",
             "interface": "swd",
